--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,8 @@
             </a>
             <a href="#portfolio" class="logo">Ethan Moroz</a>
             <div class="header-right">
-                <a href="Index.html">Home</a>
-                <a href="Index.html">Gallery</a>
+                <a href="index.html">Home</a>
+                <a href="index.html">Gallery</a>
                 <a class="active" href="resume.html">Resume</a>
             </div>
         </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="Index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="#contactPopup">Contact</a></li> 
                 </ul>
