--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="content">
             <h2>Gallery</h2>
             <p>Discover stunning landscapes, captivating portraits, and moments captured through my lens. I have also added graphics and designs that I have done throughout the years.</p>
-            <div class="gallery">
+<div id="gallery" class="gallery">
                 <figure>
                     <img src="Assets/Final-01.jpg" alt="This is a photo of my a 3D water bottle I created. The water bottle is made out of glass and has a yellow tint. It's resting on top of white tiles.">
                     <figcaption>This is a photo of a 3D water bottle I created. It's made of glass, has a yellow tint, and rests on white tiles.</figcaption>
