--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#" class="logo">
                 <img src="Assets/Asset 2.png" alt="This is a white logo. Its a circle that has a man pointing the camera to the user. His hair points out on the top of the circle.">
             </a>
-            <a href="#home" class="logo"></a>
+            <div id="Home" class="Home">
             <h1>Ethan Moroz</h1>
             <div class="header-right">
                 <a class="active" href="#Home">Home</a>
