--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <section id="home">
         <div class="header">
             <a href="#" class="logo">
                 <img src="Assets/Asset 2.png" alt="This is a white logo. Its a circle that has a man pointing the camera to the user. His hair points out on the top of the circle.">
@@ -25,6 +26,7 @@
                 <a href="resume.html">Resume</a>
             </div>
         </div>
+            </section>
     </header>
 
     <div class="hero-banner">
