--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="#contactPopup">Contact</a></li> 
                 </ul>
