--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <section id="home">
         <div class="header">
-            <a href="#" class="logo">
+            <a href="#home" class="logo">
                 <img src="Assets/Asset 2.png" alt="This is a white logo. Its a circle that has a man pointing the camera to the user. His hair points out on the top of the circle.">
             </a>
             <a href="#home" class="logo"></a>
