--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <section id="Home">
+        <div id="Home">
         <div class="header">
             <a href="#Home" class="logo">
                 <img src="Assets/Asset 2.png" alt="This is a white logo. Its a circle that has a man pointing the camera to the user. His hair points out on the top of the circle.">
@@ -26,7 +26,6 @@
                 <a href="resume.html">Resume</a>
             </div>
         </div>
-            </section>
     </header>
 
     <div class="hero-banner">
@@ -126,7 +125,7 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="#Home">Home</a></li>
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="#contactPopup">Contact</a></li> 
                 </ul>
