--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#Home" class="logo">
                 <img src="Assets/Asset 2.png" alt="This is a white logo. Its a circle that has a man pointing the camera to the user. His hair points out on the top of the circle.">
             </a>
-            <a href="#Home" class="logo"></a>
+            <href="#Home" class="logo"></a>
             <h1>Ethan Moroz</h1>
             <div class="header-right">
                 <a class="active" href="#Home">Home</a>
