--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <header>
-        <div id="Home">
+      <header>
+        <div id="Home"></div>
         <div class="header">
             <a href="#Home" class="logo">
                 <img src="Assets/Asset 2.png" alt="This is a white logo. Its a circle that has a man pointing the camera to the user. His hair points out on the top of the circle.">
             </a>
-            <a href="#Home" class="logo">
+            <a href="#Home" class="logo"></a>
             <h1>Ethan Moroz</h1>
             <div class="header-right">
                 <a class="active" href="#Home">Home</a>
