--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="accordion-item">
                 <button class="accordion-btn">Do you offer photography services?</button>
                 <div class="accordion-content">
-                    <p>Yes, I offer photography services for events, portraits, and commercial projects. Feel free to contact me for inquiries.</p>
+                    <p>Currently I am a fulltime videographer for RAW Sports, but I can do contract work on the weekends or after 5pm on weekdays.</p>
                 </div>
             </div>
         </section>
@@ -112,7 +112,7 @@
     
 <div id="jokes-container"></div>
 
-<button id="refreshButton">Refresh Jokes</button>
+<button id="refreshButton">New Jokes</button>
 
 </div>
     
